--- a/guess.html
+++ b/guess.html
@@ -24,19 +24,27 @@
         </div>
     </div>
     <div id="Easy">
-        <h1>GuesssSSSSSSS!!!!!!</h1>
+        <h1 class="guess-h1">GuesssSSSSSSS!!!!!!</h1>
+        <p>You can guess a number between 1 to 50.</p>
         <input id="easy-inp" type="number" for="number"><br />
         <button onclick="checkEasy()" id="checkeasy">Check Your Number</button>
+        <a class="level-a" href="index.html">Back</a>
     </div>
     <div id="Medium">
-        <h1>GuesssSSSSSSS!!!!!!</h1>
+        <h1 class="guess-h1">GuesssSSSSSSS!!!!!!</h1>
+        <p>You can guess a number between 1 to 100.</p>
         <input id="med-inp" type="number" for="number"><br />
         <button onclick="checkMedium()" id="checkmedium">Check Your Number</button>
+        <a class="level-a" href="index.html">Back</a>
+             
     </div>
     <div id="hard">
-        <h1>GuesssSSSSSSS!!!!!!</h1>
+        <h1 class="guess-h1">GuesssSSSSSSS!!!!!!</h1>
+        <p>You can guess a number between 1 to 1000.</p>
         <input id="hard-inp" type="number" for="number"><br />
         <button onclick="checkHard()" id="checkhard">Check Your Number</button>
+        <a class="level-a" href="index.html">Back</a>
+           
     </div>
     <script src="script.js"></script>
 
