--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-        <img id="first-image" src="images/first.png" alt="image-background">
+        <img id="first-image" src="images/image.png" alt="image-background">
         <a id="go-guess" href="guess.html">Lets start Game!!</a>
 </body>
 
