--- a/guess.html
+++ b/guess.html
@@ -12,6 +12,7 @@
     <div id="choose">
         <div id="levels">
             <h1>LeVeLs!!!!</h1>
+            <p>Choose a level to play...</p>
             <div id="buttons">
             <button onclick="easy()">Easy</button>
             <button onclick="medium()">Medium</button>
